--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       # uses: michal-h21/make4ht-action@master
       uses: docker://ghcr.io/michal-h21/make4ht-action:latest
       env:
-        command: 'make4ht -c config.cfg -ua debug -d out main.tex "fn-in"'
+        command: 'make4ht -c config.cfg -ua debug -d out main.tex 
     - name: Publish the web pages
       uses:  peaceiris/actions-gh-pages@v3
       with:
